[tool.poetry]
name = "kingdom-chisel"
version = "0.0.1dev1"
description = ""
authors = [
    "Rui Conti <rui@t10.digital>",
    "Rafael Melo <rafael@t10.digital>"
]

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]
pytest = "^3.4"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
